--- a/EA1/EA1_Abgabe.ipynb
+++ b/EA1/EA1_Abgabe.ipynb
@@ -1390,8 +1390,77 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5fef56da",
+   "metadata": {},
+   "source": [
+    "<div style=\"color: darkblue; background-color: #e0f7ff; padding: 5px; border-radius: 5px;\" title=\"Toni\">\n",
+    "\n",
+    "## Performance-Evaluierung der LU-Zerlegung\n",
+    "\n",
+    "In dieser Aufgabe soll die Performance (Laufzeit) der LU-Zerlegung einer $4096 \\times 4096$ Matrix unter Verwendung der SciPy-Funktionen `lu` und `lu_factor` aus dem Modul `scipy.linalg` untersucht werden. Diese beiden Funktionen sind in der Lage, eine Matrix in ihre LU-Zerlegung zu zerlegen, wobei $L$ eine untere Dreiecksmatrix und $U$ eine obere Dreiecksmatrix ist.\n",
+    "\n",
+    "Beide Funktionen haben den Parameter `overwrite_a`, der steuert, ob die Eingabematrix `A` während der Berechnung verändert werden darf. Der Parameter kann entweder auf `True` oder auf `False` gesetzt werden, was unterschiedliche Auswirkungen auf die Laufzeit und den Speicherbedarf haben kann.\n",
+    "\n",
+    "### Ziel der Aufgabe\n",
+    "\n",
+    "Das Ziel dieser Aufgabe ist es, die Performance der beiden Funktionen zu vergleichen und die minimalen Laufzeiten unter verschiedenen Bedingungen zu ermitteln. Dabei werden die folgenden Szenarien getestet:\n",
+    "\n",
+    "1. **`lu_factor` mit `overwrite_a=False`**\n",
+    "2. **`lu_factor` mit `overwrite_a=True`**\n",
+    "3. **`lu` mit `overwrite_a=False`**\n",
+    "4. **`lu` mit `overwrite_a=True`**\n",
+    "\n",
+    "Die minimalen Laufzeiten für diese vier Kombinationen sollen in einer Liste gespeichert werden, die wie folgt aussieht:\n",
+    "minimums = [ 1. lu_factor(A, overwrite_a=False), 2. lu_factor(A, overwrite_a=True), 3. lu(A, overwrite_a=False), 4. lu(A, overwrite_a=True) ]\n",
+    "\n",
+    "\n",
+    "### Vorgehensweise\n",
+    "\n",
+    "1. **Matrix-Erstellung**:  \n",
+    "   Zunächst wird eine zufällige Matrix $A$ der Größe $4096 \\times 4096$ erzeugt. Dies geschieht unter Verwendung des Random Number Generators (RNG) von NumPy.\n",
+    "\n",
+    "2. **Laufzeitmessung**:  \n",
+    "   Zur Messung der Laufzeit wird die Python-Funktion `timeit.repeat` verwendet. Diese Funktion ermöglicht es, den Code mehrmals auszuführen (mit `repeat=2`), um eine genauere Messung der Ausführungszeit zu erhalten. Dabei wird der `setup`-Parameter verwendet, um die Matrix vor jeder Messung zu initialisieren. Die `number=1` stellt sicher, dass jede Messung nur einmal durchgeführt wird.\n",
+    "\n",
+    "3. **Vergleich der Laufzeiten**:  \n",
+    "   Nach der Durchführung der Experimente werden die minimalen Laufzeiten für jede der vier getesteten Varianten ermittelt und in einer Liste `minimums` gespeichert.\n",
+    "\n",
+    "### Lösung\n",
+    "\n",
+    "Die Lösung verwendet die `timeit`-Funktion, um die Laufzeiten für die vier Kombinationen zu messen.\n",
+    "\n",
+    "### Interpretation der Ergebnisse\n",
+    "\n",
+    "- **`lu_factor` mit `overwrite_a=False`** hat die kürzeste Laufzeit, was darauf hindeutet, dass das Nicht-Überschreiben der Eingabematrix für diese Funktion die effizienteste Methode darstellt.\n",
+    "- **`lu_factor` mit `overwrite_a=True`** ist etwas langsamer, was möglicherweise darauf hindeutet, dass das Überschreiben der Matrix zusätzliche Rechenoperationen erfordert.\n",
+    "- **`lu` mit `overwrite_a=False`** ist langsamer als `lu_factor`, was darauf hinweist, dass die zusätzliche Funktionalität von `lu` (die die Matrix gleichzeitig in $L$ und $U$ zerlegt) zu einem größeren Rechenaufwand führt.\n",
+    "- **`lu` mit `overwrite_a=True`** ist etwas langsamer als `lu` mit `overwrite_a=False`, was darauf hindeutet, dass das Überschreiben der Matrix auch hier zu einem zusätzlichen Aufwand führt.\n",
+    "\n",
+    "### Fazit\n",
+    "\n",
+    "Die Ergebnisse bestätigen, dass `lu_factor` mit `overwrite_a=False` die effizienteste Methode für die LU-Zerlegung darstellt, während das Überschreiben der Matrix in der Regel einen leichten Performanceverlust zur Folge hat.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Hinweise\n",
+    "\n",
+    "- **Überprüfung der Performance**: Die Verwendung von `timeit.repeat` stellt sicher, dass die Laufzeiten zuverlässig und präzise gemessen werden, indem mehrere Wiederholungen durchgeführt werden.\n",
+    "- **Randomisierte Matrix**: Die Matrix wird bei jedem Lauf zufällig erzeugt, was bedeutet, dass die Tests unter realistischen Bedingungen durchgeführt werden, da die Eingabedaten für jedes Experiment unterschiedlich sind.\n",
+    "- **Überschreiben der Matrix**: Das Setzen von `overwrite_a=True` kann in einigen Fällen zu einer leicht verbesserten Performance führen, da weniger Speicher für die Eingabematrix erforderlich ist.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Zusammenfassung\n",
+    "\n",
+    "In dieser Aufgabe wurde die Performance der LU-Zerlegung für eine $4096 \\times 4096$ Matrix unter Verwendung der SciPy-Funktionen `lu_factor` und `lu` untersucht. Es wurde getestet, ob das Überschreiben der Eingabematrix (durch Setzen des Parameters `overwrite_a=True`) einen Einfluss auf die Laufzeit hat. Die Ergebnisse zeigen, dass `lu_factor` mit `overwrite_a=False` die schnellste Variante darstellt und das Überschreiben der Matrix in der Regel zu einem kleinen Performanceverlust führt.\n",
+    "\n",
+    "<div>\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "3b6bc562-608a-4f7e-b2a3-2f63d0447f85",
    "metadata": {
     "nbgrader": {
@@ -1417,13 +1486,31 @@
     }
    ],
    "source": [
-    "n = 4096\n",
-    "number = 1\n",
-    "repetitions = 2\n",
-    "# alle kürzesten Ausführungszeiten werden in minimums gespeichert\n",
+    "# Matrixgröße\n",
+    "n = 4096  # Die Matrix hat die Dimension 4096x4096\n",
+    "\n",
+    "# Anzahl der Wiederholungen und der Ausführungen pro Wiederholung für die Zeitmessung\n",
+    "number = 1  # Jede Messung wird nur einmal ausgeführt\n",
+    "repetitions = 2  # Es wird 2 Wiederholungen der Zeitmessung durchgeführt, um eine genauere Schätzung zu erhalten\n",
+    "\n",
+    "# Initialisiere den Random Number Generator (RNG) mit einem festen Seed für Reproduzierbarkeit\n",
     "rng = np.random.default_rng(seed=123)\n",
+    "\n",
+    "# Die lambda-Funktion definiert den zu wiederholenden Code, der jeweils eine der vier Varianten der LU-Zerlegung aufruft\n",
     "repeat_lambda = lambda x: repeat(x, setup=\"A = rng.random((n, n))\", repeat=repetitions, number=number, globals=globals())\n",
-    "minimums = [min(repeat_lambda(x)) for x in [\"lu_factor(A, overwrite_a=False)\", \"lu_factor(A, overwrite_a=True)\", \"lu(A, overwrite_a=False)\", \"lu(A, overwrite_a=True)\"]]\n",
+    "\n",
+    "# Wir führen die Zeitmessung für jede der vier Varianten der LU-Zerlegung durch\n",
+    "minimums = [\n",
+    "    min(repeat_lambda(x))  # Wir wählen die minimale Zeit aus den beiden Wiederholungen\n",
+    "    for x in [\n",
+    "        \"lu_factor(A, overwrite_a=False)\",  # LU-Zerlegung mit 'overwrite_a=False' und lu_factor\n",
+    "        \"lu_factor(A, overwrite_a=True)\",   # LU-Zerlegung mit 'overwrite_a=True' und lu_factor\n",
+    "        \"lu(A, overwrite_a=False)\",         # LU-Zerlegung mit 'overwrite_a=False' und lu\n",
+    "        \"lu(A, overwrite_a=True)\"           # LU-Zerlegung mit 'overwrite_a=True' und lu\n",
+    "    ]\n",
+    "]\n",
+    "\n",
+    "# Die minimalen Laufzeiten der vier Varianten werden in der Liste 'minimums' gespeichert\n",
     "minimums"
    ]
   },
@@ -1467,8 +1554,61 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "258e9b96",
+   "metadata": {},
+   "source": [
+    "<div style=\"color: darkblue; background-color: #e0f7ff; padding: 5px; border-radius: 5px;\" title=\"Toni\">\n",
+    "\n",
+    "# Untersuchung des Speicherverbrauchs der LU-Zerlegung mit Memray\n",
+    "\n",
+    "In dieser Aufgabe untersuchen wir den Speicherverbrauch von vier Varianten der LU-Zerlegung, die entweder die Funktion `lu` oder `lu_factor` verwenden, mit den Optionen `overwrite_a=True` und `overwrite_a=False`. Das Ziel ist es, den Speicherverbrauch für jede dieser Varianten zu messen und zu vergleichen, welche Version den meisten Speicher benötigt und bei welcher der Speicherverbrauch am konstantesten ist.\n",
+    "\n",
+    "## Vorgehensweise\n",
+    "\n",
+    "Wir verwenden das Profiling-Tool **Memray**, um den Speicherverbrauch zu messen. Memray verfolgt alle Speicherzuweisungen, die während der Programmausführung stattfinden. Dabei werden die Ergebnisse in einer binären Datei gespeichert. Nach der Ausführung analysieren wir diese Dateien, um den gesamten Speicherverbrauch zu ermitteln.\n",
+    "\n",
+    "Die vier Varianten, die wir vergleichen, sind:\n",
+    "\n",
+    "1. **lu_inplace**: Die Funktion `lu` wird mit der Option `overwrite_a=True` verwendet, was bedeutet, dass die Eingabematrix `A` in-place verändert wird.\n",
+    "2. **lu_notinplace**: Die Funktion `lu` wird mit der Option `overwrite_a=False` verwendet, was bedeutet, dass eine neue Matrix für die LU-Zerlegung erstellt wird.\n",
+    "3. **lu_factor_inplace**: Die Funktion `lu_factor` wird mit der Option `overwrite_a=True` verwendet.\n",
+    "4. **lu_factor_notinplace**: Die Funktion `lu_factor` wird mit der Option `overwrite_a=False` verwendet.\n",
+    "\n",
+    "## Fragen zur Analyse\n",
+    "\n",
+    "Die Aufgabe stellt zwei wichtige Fragen:\n",
+    "\n",
+    "1. **Welche Version verwendet am meisten Speicher?**\n",
+    "2. **Bei welcher Version ist der Speicherverbrauch am konstantesten?**\n",
+    "\n",
+    "## Ergebnisse\n",
+    "\n",
+    "Die Messungen für den Speicherverbrauch der verschiedenen Varianten (in MB) ergeben die folgenden Werte:\n",
+    "\n",
+    "- **Speichernutzung von lu_inplace**: 432 MB\n",
+    "- **Speichernutzung von lu_notinplace**: 560 MB\n",
+    "- **Speichernutzung von lu_factor_inplace**: 176 MB\n",
+    "- **Speichernutzung von lu_factor_notinplace**: 176 MB\n",
+    "\n",
+    "### Antwort auf die Fragen:\n",
+    "\n",
+    "1. **Welche Version verwendet am meisten Speicher?**\n",
+    "   - Die Variante `lu_notinplace` benötigt mit 560 MB den meisten Speicher.\n",
+    "\n",
+    "2. **Bei welcher Version ist der Speicherverbrauch am konstantesten?**\n",
+    "   - Die Varianten `lu_factor_inplace` und `lu_factor_notinplace` verwenden mit jeweils 176 MB konstanten Speicher und sind deutlich speichereffizienter als die anderen Varianten.\n",
+    "\n",
+    "## Fazit\n",
+    "\n",
+    "Die Analyse zeigt, dass die `lu_factor`-Funktionen deutlich weniger Speicher benötigen als die `lu`-Funktionen. Das In-place-Verfahren (mit `overwrite_a=True`) führt zu einer geringeren Speicherbelegung als das Verfahren ohne In-place-Veränderung (`overwrite_a=False`), was auf die Vermeidung zusätzlicher Speicherzuweisungen hindeutet.\n",
+    "\n",
+    "<div>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "e1f13582-71a9-4c1a-81fc-d400598964a3",
    "metadata": {
     "tags": []
@@ -1477,21 +1617,22 @@
    "source": [
     "#.py files werden erstellt für die jeweiligen Funktionen\n",
     "# auch mit der line-magic %file einzeln möglich\n",
+    "# Erstellen der Python-Dateien, die die LU-Zerlegungen ausführen und die Speichernutzung mit Memray überwachen\n",
     "for file_name in [\"lu_inplace.bin\", \"lu_notinplace.bin\", \"lu_factor_inplace.bin\", \"lu_factor_notinplace.bin\"]:\n",
     "    with open(file_name.replace(\".bin\", \".py\"), \"w\") as file:        \n",
     "        file.write(\n",
-    "f\"\"\"\n",
-    "import numpy as np\n",
-    "import memray\n",
-    "from scipy.linalg import lu_factor, lu\n",
+    "                    f\"\"\"\n",
+    "                    import numpy as np\n",
+    "                    import memray\n",
+    "                    from scipy.linalg import lu_factor, lu\n",
     "\n",
-    "n = 4096\n",
-    "rng = np.random.default_rng(seed=123)\n",
-    "A = rng.random((n, n))\n",
+    "                    n = 4096\n",
+    "                    rng = np.random.default_rng(seed=123)\n",
+    "                    A = rng.random((n, n))\n",
     "\n",
-    "with memray.Tracker(\"{file_name}\", native_traces=True):\n",
-    "    lu{\"_factor\" if \"_factor\" in file_name else \"\"}(A, overwrite_a={\"_inplace\" in file_name})\n",
-    "\"\"\")"
+    "                    with memray.Tracker(\"{file_name}\", native_traces=True):\n",
+    "                        lu{\"_factor\" if \"_factor\" in file_name else \"\"}(A, overwrite_a={\"_inplace\" in file_name})\n",
+    "                    \"\"\") # Verwende Memray Tracker, um den Speicherverbrauch zu überwachen"
    ]
   },
   {
@@ -1506,7 +1647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "9589f383-a893-4d90-93ae-c2b1f44e5d36",
    "metadata": {
     "tags": []
@@ -1516,13 +1657,14 @@
     "#alle .py files werden ausgefuehrt in python3 um .bin Dateien zu erstellen\n",
     "#diese enthalten die Infos zum Speicherbedarf\n",
     "#falls sie schon im Verzeichnis existieren, müssen sie zuvor gelöscht werden\n",
+    "# Alle .py-Dateien ausführen, um die .bin-Dateien zu erzeugen, die die Speichernutzungsdaten enthalten\n",
     "for file_name in [\"lu_inplace.bin\", \"lu_notinplace.bin\", \"lu_factor_inplace.bin\", \"lu_factor_notinplace.bin\"]:\n",
     "    os.system(f\"python3 {file_name.replace('.bin', '.py')}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "19be799c",
    "metadata": {},
    "outputs": [
@@ -1539,13 +1681,16 @@
    ],
    "source": [
     "#Speichernutzung wird aus allen .bin files gelesen und hier zusammengefasst\n",
+    "# Speichernutzung aus den .bin-Dateien lesen und ausgeben\n",
     "for file_name in [\"lu_inplace.bin\", \"lu_notinplace.bin\", \"lu_factor_inplace.bin\", \"lu_factor_notinplace.bin\"]:\n",
     "    reader = memray.FileReader(file_name)\n",
     "    mem_use = 0\n",
     "\n",
+    "    # Alle Speicherzuweisungen durchgehen und die Gesamtgröße berechnen\n",
     "    for allocation in reader.get_allocation_records():\n",
     "        mem_use += allocation.size\n",
     "\n",
+    "    # Ausgabe des gesamten Speicherverbrauchs in MB\n",
     "    print(f\"Speichernutzung von {file_name[:-4]} : {round(mem_use / 2**20)}MB\") "
    ]
   },
