Text- und Codeänderungen

--- a/EA1/EA1_Abgabe.ipynb
+++ b/EA1/EA1_Abgabe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 53,
    "id": "97230ba0-2864-4d59-bfbc-0b981f15767e",
    "metadata": {
     "tags": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 54,
    "id": "080a3fb8-9b98-4017-b6ba-3895321b8431",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 55,
    "id": "11b6c189-e0ee-411a-8f83-b804db3527d8",
    "metadata": {
     "tags": []
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 56,
    "id": "f5619384-8fab-4a57-8f30-73de2922dd89",
    "metadata": {
     "nbgrader": {
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 57,
    "id": "57fcfa50-0942-4861-be87-914dea652464",
    "metadata": {
     "editable": true,
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 58,
    "id": "9d1ee4b6",
    "metadata": {},
    "outputs": [
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 59,
    "id": "d6c50211",
    "metadata": {},
    "outputs": [
@@ -847,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 60,
    "id": "e905df91",
    "metadata": {},
    "outputs": [
@@ -1044,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 61,
    "id": "7e01d874-1715-40b2-918f-be10435918b5",
    "metadata": {
     "nbgrader": {
@@ -1202,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 62,
    "id": "ef6c6d07-df37-4011-b913-be1719ffb094",
    "metadata": {
     "nbgrader": {
@@ -1319,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "e5fb20a9-a354-4b3d-8890-8870d825d730",
    "metadata": {
     "nbgrader": {
@@ -1460,7 +1460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "3b6bc562-608a-4f7e-b2a3-2f63d0447f85",
    "metadata": {
     "nbgrader": {
@@ -1477,10 +1477,10 @@
     {
      "data": {
       "text/plain": [
-       "[1.106715604000101, 1.1456435710001642, 1.4150274240000726, 1.3996459990000858]"
+       "[1.009529693000104, 1.048232730999871, 1.4839463319999595, 1.4356397540000216]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1608,31 +1608,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "e1f13582-71a9-4c1a-81fc-d400598964a3",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "#.py files werden erstellt für die jeweiligen Funktionen\n",
-    "# auch mit der line-magic %file einzeln möglich\n",
-    "# Erstellen der Python-Dateien, die die LU-Zerlegungen ausführen und die Speichernutzung mit Memray überwachen\n",
+    "# Löschen der .bin-Dateien, wenn sie bereits existieren\n",
+    "for file_name in [\"lu_inplace.bin\", \"lu_notinplace.bin\", \"lu_factor_inplace.bin\", \"lu_factor_notinplace.bin\"]:\n",
+    "    if os.path.exists(file_name):  # Überprüfen, ob die Datei existiert\n",
+    "        os.remove(file_name)  # Löschen der Datei, wenn sie existiert\n",
+    "\n",
+    "# Erstellen der .py-Dateien ohne Indentationsfehler\n",
     "for file_name in [\"lu_inplace.bin\", \"lu_notinplace.bin\", \"lu_factor_inplace.bin\", \"lu_factor_notinplace.bin\"]:\n",
     "    with open(file_name.replace(\".bin\", \".py\"), \"w\") as file:        \n",
     "        file.write(\n",
-    "                    f\"\"\"\n",
-    "                    import numpy as np\n",
-    "                    import memray\n",
-    "                    from scipy.linalg import lu_factor, lu\n",
+    "f\"\"\"\n",
+    "import numpy as np\n",
+    "import memray\n",
+    "from scipy.linalg import lu_factor, lu\n",
     "\n",
-    "                    n = 4096\n",
-    "                    rng = np.random.default_rng(seed=123)\n",
-    "                    A = rng.random((n, n))\n",
+    "n = 4096\n",
+    "rng = np.random.default_rng(seed=123)\n",
+    "A = rng.random((n, n))\n",
     "\n",
-    "                    with memray.Tracker(\"{file_name}\", native_traces=True):\n",
-    "                        lu{\"_factor\" if \"_factor\" in file_name else \"\"}(A, overwrite_a={\"_inplace\" in file_name})\n",
-    "                    \"\"\") # Verwende Memray Tracker, um den Speicherverbrauch zu überwachen"
+    "with memray.Tracker(\"{file_name}\", native_traces=True):\n",
+    "    lu{\"_factor\" if \"_factor\" in file_name else \"\"}(A, overwrite_a={\"_inplace\" in file_name})\n",
+    "\"\"\") # Verwende Memray Tracker, um den Speicherverbrauch zu überwachen"
    ]
   },
   {
@@ -1647,7 +1650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "id": "9589f383-a893-4d90-93ae-c2b1f44e5d36",
    "metadata": {
     "tags": []
@@ -1664,7 +1667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "19be799c",
    "metadata": {},
    "outputs": [
@@ -1712,7 +1715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 71,
    "id": "2656c877",
    "metadata": {},
    "outputs": [
@@ -1769,7 +1772,7 @@
        "0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1782,21 +1785,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "3a150e02",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#command-line Befehl zum Löschen aller erstellten files\n",
     "os.system(\"rm -rf lu_*\")"
