Lösung lineare GLS Markdownzelle

--- a/EA1/EA1_Abgabe.ipynb
+++ b/EA1/EA1_Abgabe.ipynb
@@ -786,16 +786,59 @@
    "id": "aabbf72e",
    "metadata": {},
    "source": [
-    "<div style=\"color: darkblue; background-color: #e0f7ff; padding: 5px; border-radius: 5px;\" title=\"Toni\">\r\n",
+    "<div style=\"color: darkblue; background-color: #e0f7ff; padding: 5px; border-radius: 5px;\" title=\"Toni\">\n",
     "\n",
-    "  <h2>Backsubstitution-Verfahren</h2>\n",
     "\n",
-    "Im Folgenden wird eine Funktion zur Lösung eines linearen Gleichungssystems mit einer oberen Dreiecksmatrix implementiert. Dieses sogenannte Backsubstitution-Verfahren stellt einen zentralen Schritt im Rahmen des Gauß-Verfahrens bzw. der LU-Zerlegung dar. Dabei wird die Lösung des Systems zeilenweise von unten nach oben bestimmt. Die Implementierung legt besonderen Wert auf numerische Stabilität und Effizienz. \n",
+    "# Lösung linearer Gleichungssysteme mit dem Gauß-Verfahren und LU-Zerlegung\n",
     "\n",
-    "Die Funktion `b_solve` implementiert eine effiziente Rückwärtseinsetzung zur Lösung eines linearen Gleichungssystems mit oberer Dreiecksmatrix – kompakt, direkt und ohne überflüssigen Overhead.\n",
-    "Um auch Matrizen lösen zu können, welche nicht in oberer Dreiecksform vorliegen, wird der Parameter upper_triangular auf False gesetzt. Dann wird Matrix A mittels der Funktion make_triangular in eine obere Dreiecksmatrix transformiert.\n",
+    "In dieser Aufgabe geht es um die Implementierung eines grundlegenden numerischen Verfahrens zur Lösung von linearen Gleichungssystemen der Form:\n",
     "\n",
-    "</span>"
+    "$A \\cdot x = b$\n",
+    "\n",
+    "wobei:\n",
+    "- $A$ eine Matrix (n × n) ist,\n",
+    "- $x$ der gesuchte Lösungsvektor,\n",
+    "- $b$ der rechte Seitenvektor ist.\n",
+    "\n",
+    "Anstelle der Verwendung fertiger Bibliotheksfunktionen (wie `scipy.linalg.solve`) wird hier das klassische **Gaußsche Eliminationsverfahren** mit anschließender **Rückwärtseinsetzung** selbst implementiert. Ziel ist es, ein tieferes Verständnis für die numerischen Methoden zu erlangen und eine solide Basis für spätere Optimierungen und Parallelisierungen zu schaffen.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Hintergrund\n",
+    "\n",
+    "Das Gauß-Verfahren ist eine Standardmethode in der numerischen Mathematik, um lineare Gleichungssysteme zu lösen. Es besteht aus zwei Hauptschritten:\n",
+    "\n",
+    "1. **Vorwärtselimination (Dreiecksform)**  \n",
+    "   Die Matrix $A$ wird durch gezielte Zeilenoperationen in eine obere Dreiecksmatrix umgewandelt. Dies bedeutet, dass alle Einträge unterhalb der Hauptdiagonalen zu Null gemacht werden. Um numerische Stabilität sicherzustellen, wird **Pivotisierung** eingesetzt – das größte Element einer Spalte wird nach oben getauscht.\n",
+    "\n",
+    "2. **Rückwärtseinsetzung (Backsubstitution)**  \n",
+    "   Sobald die Matrix in Dreiecksform ist, kann die Lösung des Systems zeilenweise von unten nach oben bestimmt werden. Beginnend mit der letzten Gleichung wird jede Unbekannte explizit ausgerechnet.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Umsetzung\n",
+    "\n",
+    "Zwei zentrale Funktionen werden implementiert:\n",
+    "\n",
+    "- **`make_triangular(A, b)`**  \n",
+    "  Bringt die Matrix $A$ durch Vorwärtselimination und Pivotisierung in eine obere Dreiecksform, wobei notwendige Operationen auch auf den Vektor $b$ angewandt werden.\n",
+    "\n",
+    "- **`b_solve(A, b, upper_triangular=True)`**  \n",
+    "  Löst das Gleichungssystem durch Rückwärtseinsetzung. Falls `upper_triangular=False` übergeben wird, ruft die Funktion intern `make_triangular` auf, um die Matrix zuerst in Dreiecksform zu bringen.\n",
+    "\n",
+    "Besonderes Augenmerk wird auf:\n",
+    "- **Numerische Stabilität** (durch Pivotisierung),\n",
+    "- **Effizienz** (durch vektorisiertes Rechnen mit `numpy`),\n",
+    "- **Korrekte Fehlerbehandlung** (z. B. bei singulären Matrizen)\n",
+    "gelegt.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Zusammenfassung\n",
+    "\n",
+    "Durch diese Implementierung wird ein vollständiger, effizienter und robuster Ansatz zum Lösen von linearen Gleichungssystemen bereitgestellt, der später als Grundlage für Optimierungs- und Parallelisierungsstrategien dienen kann.\n",
+    "\n",
+    "<div>"
    ]
   },
   {
