--- a/EA1/EA1_Abgabe.ipynb
+++ b/EA1/EA1_Abgabe.ipynb
@@ -1467,78 +1467,101 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "022122a2-877f-4e16-9417-406fe4846e94",
+   "metadata": {},
+   "source": [
+    "<div style=\"color: darkblue; background-color: #e0f7ff; padding: 5px; border-radius: 5px;\" title=\"Toni\">\n",
+    "\n",
+    "# Speicherverbrauchsanalyse von LU-Zerlegungen mit Memray\n",
+    "\n",
+    "## Was ist Memray?\n",
+    "\n",
+    "[Memray](https://bloomberg.github.io/memray/) ist ein High-Performance-Profiler für Python, entwickelt von Bloomberg.\n",
+    "\n",
+    "Er ermöglicht es, den **Speicherverbrauch** und die **Speicherallokationen** von Python-Programmen sehr genau zu analysieren.  \n",
+    "Memray kann entweder direkt aus Python heraus (mit `memray.Tracker`) oder über die Kommandozeile (z.B. `memray stats`) genutzt werden.\n",
+    "\n",
+    "In dieser Aufgabe wird Memray verwendet, um gezielt den Speicherverbrauch der LU-Zerlegungen zu messen und zu vergleichen.\n",
+    "\n",
+    "## Einleitung\n",
+    "\n",
+    "In dieser Analyse wird der Speicherverbrauch von vier Varianten der LU-Zerlegung gemessen und miteinander verglichen:\n",
+    "\n",
+    "- **`lu_inplace`**: LU-Zerlegung mit Überschreiben der Eingabematrix (`overwrite_a=True`)\n",
+    "- **`lu_notinplace`**: LU-Zerlegung ohne Überschreiben der Eingabematrix (`overwrite_a=False`)\n",
+    "- **`lu_factor_inplace`**: Optimierte LU-Zerlegung (`lu_factor`) mit Überschreiben der Eingabematrix\n",
+    "- **`lu_factor_notinplace`**: Optimierte LU-Zerlegung (`lu_factor`) ohne Überschreiben der Eingabematrix\n",
+    "\n",
+    "Zur Messung des Speicherverbrauchs wird die Library **Memray** eingesetzt.  \n",
+    "Für jede Variante wird eine eigene Python-Datei erzeugt und ausgeführt. Dabei wird die jeweilige Berechnung innerhalb eines **Memray-Context Managers** (`memray.Tracker`) durchgeführt, sodass ausschließlich der Speicherbedarf der LU-Zerlegung selbst aufgezeichnet wird.\n",
+    "\n",
+    "Die entstehenden `.bin`-Dateien enthalten die Speicheraufzeichnungen und werden anschließend ausgewertet.\n",
+    "\n",
+    "Vorgehensweise:\n",
+    "\n",
+    "- Python-Skripte für jede Variante erzeugen\n",
+    "- Vorherige .bin-Dateien löschen\n",
+    "- Skripte ausführen und .bin-Dateien erstellen\n",
+    "- Speicherverbrauch analysieren\n",
+    "- Ergebnisse vergleichen\n",
+    "\n",
+    "</div>hediv?\n",
+    "\n",
+    "---\n",
+    "<div>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "e1f13582-71a9-4c1a-81fc-d400598964a3",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": [
-    "#.py files werden erstellt für die jeweiligen Funktionen\n",
-    "# auch mit der line-magic %file einzeln möglich\n",
-    "for file_name in [\"lu_inplace.bin\", \"lu_notinplace.bin\", \"lu_factor_inplace.bin\", \"lu_factor_notinplace.bin\"]:\n",
-    "    with open(file_name.replace(\".bin\", \".py\"), \"w\") as file:        \n",
-    "        file.write(\n",
-    "f\"\"\"\n",
-    "import numpy as np\n",
-    "import memray\n",
-    "from scipy.linalg import lu_factor, lu\n",
-    "\n",
-    "n = 4096\n",
-    "rng = np.random.default_rng(seed=123)\n",
-    "A = rng.random((n, n))\n",
-    "\n",
-    "with memray.Tracker(\"{file_name}\", native_traces=True):\n",
-    "    lu{\"_factor\" if \"_factor\" in file_name else \"\"}(A, overwrite_a={\"_inplace\" in file_name})\n",
-    "\"\"\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "08f69b53",
-   "metadata": {},
-   "source": [
-    "<div style=\"color: darkblue; background-color: #e0f7ff; padding: 5px; border-radius: 5px;\" title=\"Toni\">\n",
-    "memray muss installiert und importierbar sein, es wurde version 1.16.0 gemäß Dockerfile aus dem Kurs verwendet.\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "9589f383-a893-4d90-93ae-c2b1f44e5d36",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "#alle .py files werden ausgefuehrt in python3 um .bin Dateien zu erstellen\n",
-    "#diese enthalten die Infos zum Speicherbedarf\n",
-    "#falls sie schon im Verzeichnis existieren, müssen sie zuvor gelöscht werden\n",
-    "for file_name in [\"lu_inplace.bin\", \"lu_notinplace.bin\", \"lu_factor_inplace.bin\", \"lu_factor_notinplace.bin\"]:\n",
-    "    os.system(f\"python3 {file_name.replace('.bin', '.py')}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "19be799c",
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Speichernutzung von lu_inplace : 432MB\n",
-      "Speichernutzung von lu_notinplace : 560MB\n",
-      "Speichernutzung von lu_factor_inplace : 176MB\n",
-      "Speichernutzung von lu_factor_notinplace : 176MB\n"
+      "\n",
+      "Speichernutzung der einzelnen Varianten:\n",
+      "lu_inplace: 432 MB\n",
+      "lu_notinplace: 560 MB\n",
+      "lu_factor_inplace: 176 MB\n",
+      "lu_factor_notinplace: 176 MB\n"
      ]
     }
    ],
    "source": [
-    "#Speichernutzung wird aus allen .bin files gelesen und hier zusammengefasst\n",
+    "# 1. Erstellen der .py-Dateien für jede LU-Variante\n",
+    "for file_name in [\"lu_inplace.bin\", \"lu_notinplace.bin\", \"lu_factor_inplace.bin\", \"lu_factor_notinplace.bin\"]:\n",
+    "    with open(file_name.replace(\".bin\", \".py\"), \"w\") as file:\n",
+    "        file.write(\n",
+    "f\"\"\"import numpy as np\n",
+    "import memray\n",
+    "from scipy.linalg import lu_factor, lu\n",
+    "\n",
+    "n = 4096  # Matrixgröße (4096x4096) => relativ große Matrix\n",
+    "rng = np.random.default_rng(seed=123)\n",
+    "A = rng.random((n, n))  # Erzeuge Zufallsmatrix\n",
+    "\n",
+    "# Speichermessung nur innerhalb der LU-Funktion\n",
+    "with memray.Tracker(\"{file_name}\", native_traces=True):\n",
+    "    lu{\"_factor\" if \"_factor\" in file_name else \"\"}(A, overwrite_a={\"_inplace\" in file_name})\n",
+    "\"\"\")\n",
+    "\n",
+    "# 2. Löschen eventuell existierender .bin-Dateien (verhindert Fehler bei Memray)\n",
+    "for file_name in [\"lu_inplace.bin\", \"lu_notinplace.bin\", \"lu_factor_inplace.bin\", \"lu_factor_notinplace.bin\"]:\n",
+    "    if os.path.exists(file_name):\n",
+    "        os.remove(file_name)\n",
+    "\n",
+    "# 3. Ausführen der generierten .py-Dateien, um die .bin-Dateien neu zu erstellen\n",
+    "for file_name in [\"lu_inplace.bin\", \"lu_notinplace.bin\", \"lu_factor_inplace.bin\", \"lu_factor_notinplace.bin\"]:\n",
+    "    os.system(f\"python3 {file_name.replace('.bin', '.py')}\")\n",
+    "\n",
+    "# 4. Auslesen der Speichernutzung aus den .bin-Dateien\n",
+    "print(\"\\nSpeichernutzung der einzelnen Varianten:\")\n",
     "for file_name in [\"lu_inplace.bin\", \"lu_notinplace.bin\", \"lu_factor_inplace.bin\", \"lu_factor_notinplace.bin\"]:\n",
     "    reader = memray.FileReader(file_name)\n",
     "    mem_use = 0\n",
@@ -1546,7 +1569,7 @@
     "    for allocation in reader.get_allocation_records():\n",
     "        mem_use += allocation.size\n",
     "\n",
-    "    print(f\"Speichernutzung von {file_name[:-4]} : {round(mem_use / 2**20)}MB\") "
+    "    print(f\"{file_name[:-4]}: {round(mem_use / 2**20)} MB\")  # Ausgabe in Megabyte (MB)"
    ]
   },
   {
@@ -1630,8 +1653,7 @@
     }
    ],
    "source": [
-    "#Auch die command-line Funktion von memray kann verwendet werden\n",
-    "# äquivalent zu !memray stats lu_inplace.bin\n",
+    "# 5. Optional: Zusätzlich Memray Command-Line Report erstellen\n",
     "os.system(\"memray stats lu_inplace.bin\")"
    ]
   },
