--- a/EA1/EA1_Abgabe.ipynb
+++ b/EA1/EA1_Abgabe.ipynb
@@ -1396,53 +1396,53 @@
    "source": [
     "<div style=\"color: darkblue; background-color: #e0f7ff; padding: 5px; border-radius: 5px;\" title=\"Toni\">\n",
     "\n",
-    "# Performance-Analyse der LU-Zerlegung mit SciPy\r\n",
-    "\r\n",
-    "## Aufgabenstellung\r\n",
-    "\r\n",
-    "In dieser Aufgabe wird die **Laufzeit** der LU-Dekomposition einer großen Matrix (4096×4096) mit den Funktionen [`lu`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.linalg.lu.html) und [`lu_factor`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.linalg.lu_factor.html) aus dem Paket `scipy.linalg` untersucht.\r\n",
-    "\r\n",
-    "Beide Funktionen verfügen über den Parameter `overwrite_a`, der steuert, ob die Eingabematrix überschrieben werden darf (`True`) oder nicht (`False`).\r\n",
-    "\r\n",
-    "**Ziel:**  \r\n",
-    "Ermitteln Sie die minimalen Laufzeiten für folgende Varianten:\r\n",
-    "1. `lu_factor(A, overwrite_a=False)`\r\n",
-    "2. `lu_factor(A, overwrite_a=True)`\r\n",
-    "3. `lu(A, overwrite_a=False)`\r\n",
-    "4. `lu(A, overwrite_a=True)`\r\n",
-    "\r\n",
-    "Die minimalen Zeiten sollen in dieser Reihenfolge in einer Liste `minimums` gespeichert werden.\r\n",
-    "\r\n",
-    "---\r\n",
-    "\r\n",
-    "## Hinweise\r\n",
-    "\r\n",
-    "- Setzt man `overwrite_a=True`, kann sich die Matrix `A` verändern, was zu einer Vereinfachung der Berechnung führen könnte.\r\n",
-    "- Um diese Beeinflussung zu verhindern, wird **vor jedem Funktionsaufruf eine neue Matrix** erzeugt.\r\n",
-    "- Dafür verwenden wir die Funktion [`repeat`](https://docs.python.org/3/library/timeit.html#timeit.repeat) aus dem Modul `timeit`:\r\n",
-    "  - `repeat=2`: zwei unabhängige Messungen\r\n",
-    "  - `number=1`: jede Messung führt die Funktion genau einmal aus\r\n",
-    "- Von den zwei gemessenen Zeiten wird die **kürzere** genommen, um zufällige Ausreißer zu minimieren.\r\n",
-    "\r\n",
-    "---\r\n",
-    "\r\n",
-    "## Vorgehensweise\r\n",
-    "\r\n",
-    "1. Setzen der Matrixgröße `n = 4096`.\r\n",
-    "2. Initialisieren eines Zufallszahlengenerators (`rng`) mit festem Seed.\r\n",
-    "3. Erstellen einer Hilfsfunktion, die:\r\n",
-    "   - eine neue Matrix erzeugt,\r\n",
-    "   - die jeweilige LU-Funktion ausführt,\r\n",
-    "   - die Laufzeit misst.\r\n",
-    "4. Speichern der minimalen Laufzeiten der vier Varianten in der Liste `minimums`.\r\n",
-    "5. Ausgabe der Ergebnisse.\r\n",
-    "\r\n",
-    "---\r\n",
-    "\r\n",
-    "## Ziel\r\n",
-    "\r\n",
-    "Nach Ausführung des Codes enthält die Liste `minimums` die minimalen Laufzeiten der vier getesteten Var\n",
-    "</div>ianten in der oben vorgegebenen Reihenfolge.\r\n"
+    "# Performance-Analyse der LU-Zerlegung mit SciPy\n",
+    "\n",
+    "## Aufgabenstellung\n",
+    "\n",
+    "In dieser Aufgabe wird die **Laufzeit** der LU-Dekomposition einer großen Matrix (4096×4096) mit den Funktionen [`lu`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.linalg.lu.html) und [`lu_factor`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.linalg.lu_factor.html) aus dem Paket `scipy.linalg` untersucht.\n",
+    "\n",
+    "Beide Funktionen verfügen über den Parameter `overwrite_a`, der steuert, ob die Eingabematrix überschrieben werden darf (`True`) oder nicht (`False`).\n",
+    "\n",
+    "**Ziel:**  \n",
+    "Ermitteln Sie die minimalen Laufzeiten für folgende Varianten:\n",
+    "1. `lu_factor(A, overwrite_a=False)`\n",
+    "2. `lu_factor(A, overwrite_a=True)`\n",
+    "3. `lu(A, overwrite_a=False)`\n",
+    "4. `lu(A, overwrite_a=True)`\n",
+    "\n",
+    "Die minimalen Zeiten sollen in dieser Reihenfolge in einer Liste `minimums` gespeichert werden.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Hinweise\n",
+    "\n",
+    "- Setzt man `overwrite_a=True`, kann sich die Matrix `A` verändern, was zu einer Vereinfachung der Berechnung führen könnte.\n",
+    "- Um diese Beeinflussung zu verhindern, wird **vor jedem Funktionsaufruf eine neue Matrix** erzeugt.\n",
+    "- Dafür verwenden wir die Funktion [`repeat`](https://docs.python.org/3/library/timeit.html#timeit.repeat) aus dem Modul `timeit`:\n",
+    "  - `repeat=2`: zwei unabhängige Messungen\n",
+    "  - `number=1`: jede Messung führt die Funktion genau einmal aus\n",
+    "- Von den zwei gemessenen Zeiten wird die **kürzere** genommen, um zufällige Ausreißer zu minimieren.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Vorgehensweise\n",
+    "\n",
+    "1. Setzen der Matrixgröße `n = 4096`.\n",
+    "2. Initialisieren eines Zufallszahlengenerators (`rng`) mit festem Seed.\n",
+    "3. Erstellen einer Hilfsfunktion, die:\n",
+    "   - eine neue Matrix erzeugt,\n",
+    "   - die jeweilige LU-Funktion ausführt,\n",
+    "   - die Laufzeit misst.\n",
+    "4. Speichern der minimalen Laufzeiten der vier Varianten in der Liste `minimums`.\n",
+    "5. Ausgabe der Ergebnisse.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Ziel\n",
+    "\n",
+    "Nach Ausführung des Codes enthält die Liste `minimums` die minimalen Laufzeiten der vier getesteten Varianten in der oben vorgegebenen Reihenfolge.\n",
+    "</div>\n"
    ]
   },
   {
@@ -1582,10 +1582,7 @@
     "- Speicherverbrauch analysieren\n",
     "- Ergebnisse vergleichen\n",
     "\n",
-    "</div>hediv?\n",
-    "\n",
-    "---\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
